# os2mo-manager-sync

./: .coveragerc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  init.config.yaml  inject_data.sh  mypy.ini  pyproject.toml
.reuse/: dep5
deployment/: docker-compose.yaml
sd_managerscript/: config.py  exceptions.py  filters.py  holstebro_managers.py  init.py  inject_test_data.py  log.py  main.py  managerlevel.py  mo.py  models.py  queries.py  terminate.py  util.py
tests/: conftest.py  test_filters.py  test_holstebro_managers.py  test_init.py  test_main.py  test_sd_managerscript.py  test_util.py
tests/test_data/: inject_test_data.py  sample_test_data.py
