# SPDX-FileCopyrightText: 2022 Magenta ApS <https://magenta.dk>
# SPDX-License-Identifier: MPL-2.0

[tool.poetry]
name = "sd-managerscript"
version = "0.1.0"
description = ""
authors = ["Michael Søegaard <ms@magenta-aps.dk>"]

[tool.poetry.dependencies]
python = "^3.10"
raclients = "^2.0.0"
uvicorn = "^0.19.0"
fastapi = "^0.85.1"
pytest-asyncio = "^0.20.1"
pydantic = "^1.10.2"
structlog = "^22.1.0"
gql = "^3.4.0"
requests = "^2.28.1"
mypy = ">=0.982"
argparse = "^1.4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
black = "^22.10.0"
reorder-python-imports = "^3.9.0"
mypy = ">=0.982"
pre-commit = "^2.20.0"
pylint-pydantic = "^0.1.4"
pylint = "^2.15.5"
hypothesis = "^6.56.4"

[tool.poetry.group.dev.dependencies]
pytest-split = "^0.8.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode="auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = "True"
warn_unused_configs = "True"
check_untyped_defs = "True"
disallow_untyped_defs = "True"
plugins = "pydantic.mypy"

[tool.flake8]
max-line-length = 88
exclude = [
".git", "__pycache__", ".mypy_cache", ".pytest_cache", ".venv", ".gitlab"
]
